--- a/src/styles/search.css
+++ b/src/styles/search.css
@@ -3,7 +3,6 @@
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
-  background: var(--light-white);
   padding: 1rem 0;
   border-radius: 1rem;
   width: 100%;
@@ -24,7 +23,6 @@
   margin: 0 1rem;
   width: auto;
   min-width: 22vw;
-  background: var(--dark-blue1);
 }
 
 .form-search .form-search__block-two span {
